Index UX: Project covers title/client error to link to the project fixed.

--- a/app/scss/modules/_project-cover.scss
+++ b/app/scss/modules/_project-cover.scss
@@ -123,6 +123,10 @@
 		@include transform-origin(bottom, left);
 		@include transitions-ease(.5s);
 	}
+
+	.title, .client{
+		pointer-events: none;
+	}
 	
 }
 
